@startuml
namespace main {
    class BasicCustomer << (S,Aquamarine) >> {
        - name: string
        - balance: int
        - tickets: <font color=blue>map</font>[Movie]Tickets

        - printTicketsOfCurrentHall(в hallNumber: int)
        - buyTicket(в hallI: HallI,в movie: Movie,в countOfTickets: int): вых error

    }
    class Beneficiary << (S,Aquamarine) >> {
        - name: string
        - balance: int
        - tickets: <font color=blue>map</font>[Movie]Tickets

        - printTicketsOfCurrentHall(в hallNumber: int)
        - buyTicket(в hallI: HallI,в movie: Movie,в countOfTickets: int): вых error

    }
    class Cinema << (S,Aquamarine) >> {
        - adress: string
        - halls: []*Hall
        - vipHalls: []*VipHall

    }
    interface CustomerI  {
        - printTicketsOfCurrentHall(в hallNumber: int)
        - buyTicket(в hall: HallI,в movie: Movie,в countOfTickets: int): вых error

    }
    class Hall << (S,Aquamarine) >> {
        - number: int
        - movieMap: <font color=blue>map</font>[Movie]int
        - capacity: int

        - getAddedCostCoefficient(): вых int
        - getCurrentHall(): (вых *Hall,вых int,вых int,вых bool)

    }
    interface HallI  {
        - getCurrentHall(): (вых *Hall,вых int,вых int,вых bool)
        - getAddedCostCoefficient(): вых int

    }
    class Movie << (S,Aquamarine) >> {
        - title: string
        - startTime: time.Time
        - duration: time.Duration
        - ticketPrice: int

    }
    class Tickets << (S,Aquamarine) >> {
        - isVipHall: bool
        - hallNumber: int
        - movie: Movie
        - price: int
        - countOfTickets: int

    }
    class VipHall << (S,Aquamarine) >> {
        - addedCostCoefficient: int

        - getAddedCostCoefficient(): вых int
        - getCurrentHall(): (вых *Hall,вых int,вых int,вых bool)

    }
}
"main.CustomerI" *-- "main.BasicCustomer"
"main.CustomerI" *-- "main.Beneficiary"
"main.HallI" *-- "main.Hall"
"main.Hall" *-- "main.VipHall"
"main.HallI" *-- "main.VipHall"

"main.CustomerI" <|-- "main.BasicCustomer"
"main.CustomerI" <|-- "main.Beneficiary"
"main.HallI" <|-- "main.Hall"
"main.HallI" <|-- "main.VipHall"

@enduml
